--- a/Web.config
+++ b/Web.config
@@ -13,6 +13,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 
+  <connectionStrings>
+    <add name="RibbitConnection" connectionString="Server=.\SqlExpress;Database=RibbitDatabase;Trusted_Connection=true;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+
   <system.web>
     
     <httpRuntime targetFramework="4.5" />
